--- a/index.html
+++ b/index.html
@@ -3,22 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>srikant portfolio</title>
+	<title>Nisha Kumari|| Khabai Tech</title>
 
-	<link rel="icon" href="Slogo.png">
+	<link rel="icon" href="logo.png">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 	<style type="text/css">
 		@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
 		:root{
 			--bg-black-900:#f2f2fc;
 			--bg-black-100:#fdf9ff;
@@ -533,7 +525,43 @@
 		}
 
 	/* ========= Portfolio Section ========== */
-		.
+		.portfolio .container{
+			padding-bottom: 40px;
+		}
+		#portfolio{
+			font-size: 18px;
+			color: var(--text-black-700);
+			margin: auto;
+			margin-bottom: 15px;
+		}
+		.portfolio .portfolio-heading{
+			flex: 0 0 100%;
+			max-width: 100%;
+			margin-bottom: 40px;
+		}
+		.portfolio-heading h2{
+			color: var(--text-black-900);
+			font-weight: 500;
+		}
+		.portfolio-img img{
+			height: 250px;
+			width:100%;
+			display: block;
+		}
+		.portfolio-img img:hover{
+			transform: scale(1.5);
+		}
+		.portfolio .portfolio-item{
+			flex: 0 0 33.33%;
+			max-width: 33.33%;
+			margin-bottom: 30px;
+		}
+		.portfolio .portfolio-item-inner{
+			border: 6px solid var(--bg-black-100);
+			border-radius: 10px;
+			overflow: hidden;
+			cursor: pointer;
+		}
 
 	/* ========= Contact Section ========== */
 		.contact-title{
@@ -664,7 +692,7 @@
 	<!-- ====Aside Start ==== -->
 		<div class="aside">
 			<div class="logo">
-				<a href="#"><span>S</span>rikant</a>
+				<a href="#"><span>N</span>isha</a>
 			</div>
 			<div class="nav-toggler">
 				<span></span>
@@ -686,13 +714,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="home-info padd-15">
-							<h3 class="hello">Hello, my name is <span>Srikant Babu</span></h3>
+							<h3 class="hello">Hello, my name is <span>Nisha Kumari</span></h3>
 							<h3 class="my-profession">I am a <span class="typing">Web Developer</span></h3>
-							<p>Hello there! I'm a Website Designer & Developer living in Nalanda, Bihar. Since my youngest age I have been passionate about Technology. I grew up with the Internet, and naturally took a path according to this passion. </p>
-							<a href="https://www.linkedin.com/in/Srikant Babu" class="btn hire-me shadow-dark"> Hire Me</a>
+							<p>Hello there! I'm a Website Designer & Developer living in Patna, Bihar. Since my youngest age I have been passionate about design and art. I grew up with the Internet, and naturally took a path according to this passion. </p>
+							<a href="https://www.linkedin.com/in/vishnu-priya-702b3425a" class="btn hire-me shadow-dark"> Hire Me</a>
 						</div>
 						<div class="home-img padd-15">
-							<img src="my image.jpg" width="280px" >
+							<img src="nisha.jpg">
 						</div>
 					</div>
 				</div>
@@ -711,8 +739,8 @@
 						<div class="about-content padd-15">
 							<div class="row">
 								<div class="about-text padd-15">
-									<h3>I'm Srikant Babu and <span>Web Developer</span></h3>
-									<p> I'm basically from Bihar. Now I am pursuing my Diploma in Computer Science & Engineering from Government Ploytechnic Patna-7.<br>Recently, I have completed my internship from KHABAI TECH, Hajipur.</p>
+									<h3>I'm Nisha Kumari and <span>Web Developer</span></h3>
+									<p> I'm basically from Bihar. Now I am pursuing my Diploma in Computer Science & Engineering from Government Politechnic Patna-7.<br>Recently, I have completed my internship from KHABAI TECH, Hajipur.</p>
 									<p>I'm a hard working individual who would like to do things with perfection. I love coding.</p>
 								</div>
 							</div>
@@ -723,19 +751,19 @@
 											<p>Profile : <span>Front End Developer</span></p>
 										</div>
 										<div class="info-items padd-15">
-											<p>D.O.B : <span>8 sep 2004</span></p>
+											<p>D.O.B : <span>15 November 2004</span></p>
 										</div>
 										<div class="info-items padd-15">
-											<p>Email : <span>srikantkumar9117@gmail.com</span></p>
+											<p>Email : <span>nishamishra4141@gmail.com</span></p>
 										</div>
 										<div class="info-items padd-15">
 											<p>Degree : <span>Computer Science Engg.</span></p>
 										</div>
 										<div class="info-items padd-15">
-											<p>Hobby : <span>Tech & Cricket</span></p>
+											<p>Hobby : <span>Art & Craft</span></p>
 										</div>
 										<div class="info-items padd-15">
-											<p>City : <span>Bihar Sharif</span></p>
+											<p>City : <span>Patna</span></p>
 										</div>
 									</div>
 									<div class="row">
@@ -755,8 +783,8 @@
 										<div class="skill-item padd-15">
 											<h5>CSS</h5>
 											<div class="progress">
-												<div class="progress-in" style="width:60%;"></div>
-												<div class="skill-percent">60%</div>
+												<div class="progress-in" style="width:65%;"></div>
+												<div class="skill-percent">65%</div>
 											</div>
 										</div>
 										<div class="skill-item padd-15">
@@ -769,14 +797,13 @@
 										<div class="skill-item padd-15">
 											<h5>JS</h5>
 											<div class="progress">
-												<div class="progress-in" style="width:10%;"></div>
-												<div class="skill-percent">10%</div>
+												<div class="progress-in" style="width:20%;"></div>
+												<div class="skill-percent">20%</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<!-- ==== start timeline item ==== -->
 							<div class="row">
 								<div class="education padd-15" data-aos="fade-right">
 									<h3 class="title">Education</h3>
@@ -784,33 +811,33 @@
 										<div class="timeline-box padd-15">
 											<div class="timeline shadow-dark">
 
-								
+								<!-- ==== timeline item ==== -->
 								
 									<div class="timeline-item">
 									<div class="circle-dot"></div>
 									<h3 class="timeline-date">
-									<i class="fa fa-calendar"></i>2022 - present
+									<i class="fa fa-calendar"></i>2023- present
 									</h3>	
-									<h4 class="timeline-title">Diploma in CSE</h4>
+									<h4 class="timeline-title">Diploma in CS</h4>
 									<p class="timeline-text"> I am studying in G.P. Patna-7, Gulzarbagh and my branch is Computer Science. It makes me serious about my career. In my college life, along with studing, I enjoyed a lot of things with my friends and teachers.</p>
 									</div>
 
 									<div class="timeline-item">
 									<div class="circle-dot"></div>
 									<h3 class="timeline-date">
-									<i class="fa fa-calendar"></i>2020 - 2022
+									<i class="fa fa-calendar"></i>2021 - 2023
 									</h3>	
 									<h4 class="timeline-title">Intermediate in Science</h4>
-									<p class="timeline-text">I have completed my ISc. from NALANDA COLLEGIATE +2 SCHOOL Biharsharif ,Nalanda. College life teaches me to be independent. All my teachers love me and always support me. I am always eager to learn new things. </p>
+									<p class="timeline-text">I have completed my Kendriya Vidyalya, Sasaram {Rohtas}. College life teaches me to be independent. All my teachers love me and always support me. I am always eager to learn new things. </p>
 									</div>
 
 									<div class="timeline-item">
 									<div class="circle-dot"></div>
 									<h3 class="timeline-date">
-									<i class="fa fa-calendar"></i>2019 - 2020
+									<i class="fa fa-calendar"></i>2020 - 2021
 									</h3>	
 									<h4 class="timeline-title">Matriculation</h4>
-									<p class="timeline-text">I have done my schooling from NALANDA COLLEGIATE +2 SCHOOL Biharsharif ,Nalanda. Everyday I learn new things here and enjoy it with my friends. I was always ready to participate in my all school events and also I won a lot of prizes during my school.</p>
+									<p class="timeline-text">I have done my schooling from Kendriya Vidyalya Sasaram {Rohtas}. Everyday I learn new things here and enjoy it with my friends. I was always ready to participate in my all school events and also I won a lot of prizes during my school.</p>
 									</div>
 										</div>	
 										</div>
@@ -908,48 +935,79 @@
 <!-- ==== Service Section End ==== -->
 
 <!-- ==== Portfolio Section Start ==== -->
-			
-
-
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-       <a href="task 5.html"> <img class="d-block w-100" src="task 5 image.png" alt="First slide"></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task18.html"> <img class="d-block w-100" src="task 18 image.png" alt="Second slide"></a>
-    </div>
-    <div class="carousel-item">
-         <a href="task 14.html"><img class="d-block w-100" src="task 14 image.png" alt="Third slide"></a>
-    </div>
-    <div class="carousel-item">
-         <a href="task 13.html"><video class="d-block w-100" src="task 13 animation.mp4" autoplay muted loop height="600px" width="800px" ></video></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task 6.html"> <img class="d-block w-100" src="task 6 image.png" alt="Fiveth slide"></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task 4.html"> <img class="d-block w-100" src="task 4 image.png" alt="Sixth slide"></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task 11.html"> <video class="d-block w-100" src="task 11 animation.mp4" autoplay muted loop height="600px" width="800px"></video></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task 8.html"> <video class="d-block w-100" src="task 8 animation.mp4" autoplay muted loop height="600px" width="800x"></video></a>
-    </div>
-    <div class="carousel-item">
-       <a href="task 7.html"> <video class="d-block w-100" src="task 7 animation.mp4" autoplay muted loop height="600px" width="800x"></video></a>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+			<section id="portfolio" class="portfolio section">
+				<div class="container">
+					<div class="row">
+						<div class="section-title padd-15">
+							<h2>Portfolio</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="portfolio-heading padd-15">
+							<h2>My Last Projects :</h2>
+						</div>
+					</div>
+					<div class="row">
+						<p id="portfolio">I enjoy taking complex problems and turning them into simple and beautiful interface designs. Here's a taste of my work... </p>
+					</div>
+					<div class="row">
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15"  data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="taj.html"><img src="taj1.png"></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15"  data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="task14.html"><img src="task14screen.png"></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15"  data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="task19.html"><img src="task19image.png"></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15"  data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="task17.html"><img src="watch.png"></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15" data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="task18.html"><img src="business.png"></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+						<!-- ==== portfolio item start ===== -->
+						<div class="portfolio-item padd-15"  data-aos="zoom-in">
+							<div class="portfolio-item-inner shadow-dark">
+								<div class="portfolio-img">
+								<a href="task09.html"><video src="BallAni.mp4" autoplay muted loop width="100%" height="230px"></video></a>
+								</div>
+							</div>
+						</div>
+						<!-- ==== portfolio item end ===== -->
+					</div>
+				</div>
+			</section>
 <!-- ==== Portfolio Section End ==== -->
 
 <!-- ==== Contact Section Start ==== -->
@@ -967,7 +1025,7 @@
 						<div class="contact-info-item padd-15">
 							<div class="icon"><i class="fa fa-phone"></i></div>
 							<h4>Call Us On</h4>
-							<p>+91 9117774988</p>
+							<p>+91 7667883441</p>
 						</div> 
 						<!-- ==== Contact info item end ==== --> 
 						<!-- ==== Contact info item start ==== -->
@@ -981,14 +1039,14 @@
 						<div class="contact-info-item padd-15">
 							<div class="icon"><i class="fa fa-envelope"></i></div>
 							<h4>Email</h4>
-							<p>srikantkumar9117@gmail.com</p>
+							<p>nishamishra4141@gmail.com</p>
 						</div> 
 						<!-- ==== Contact info item end ==== -->
 						<!-- ==== Contact info item start ==== -->
 						<div class="contact-info-item padd-15">
 							<div class="icon"><i class="fa fa-globe-europe"></i></div>
 							<h4>Website</h4>
-							<p>www.srikank portfolio.com</p>
+							<p>www.khabaitech.com</p>
 						</div> 
 						<!-- ==== Contact info item end ==== -->   
 					</div>
@@ -1025,7 +1083,7 @@
 							</div>
 							<div class="row">
 								<div class="form-item col-12 padd-15">
-							    <a href="mailto:srikantkumar9117@gmail.com">
+							    <a href="mailto:vishnupriya90807@gmail.com">
 								<button type="submit" class="btn shadow-dark"> Send Message</button></a>
 								</div>
 							</div>
