--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nisha Kumari|| Khabai Tech</title>
 
-	<link rel="icon" href="logo.png">
+	<link rel="icon" href="n logo.JPG">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -683,6 +683,7 @@
 				flex: 0 0 100%;
 				max-width: 100%;
 			}
+
 		</style>
 
 </head>
@@ -717,7 +718,7 @@
 							<h3 class="hello">Hello, my name is <span>Nisha Kumari</span></h3>
 							<h3 class="my-profession">I am a <span class="typing">Web Developer</span></h3>
 							<p>Hello there! I'm a Website Designer & Developer living in Patna, Bihar. Since my youngest age I have been passionate about design and art. I grew up with the Internet, and naturally took a path according to this passion. </p>
-							<a href="https://www.linkedin.com/in/vishnu-priya-702b3425a" class="btn hire-me shadow-dark"> Hire Me</a>
+							<a href="https://www.linkedin.com/in/nisha-kumari-b24a29298?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn hire-me shadow-dark"> Hire Me</a>
 						</div>
 						<div class="home-img padd-15">
 							<img src="nisha.jpg">
@@ -1000,7 +1001,7 @@
 						<div class="portfolio-item padd-15"  data-aos="zoom-in">
 							<div class="portfolio-item-inner shadow-dark">
 								<div class="portfolio-img">
-								<a href="task09.html"><video src="BallAni.mp4" autoplay muted loop width="100%" height="230px"></video></a>
+								<a href="text.html"><img src="him.jpg" width="100%" height="230px"></a>
 								</div>
 							</div>
 						</div>
@@ -1083,7 +1084,7 @@
 							</div>
 							<div class="row">
 								<div class="form-item col-12 padd-15">
-							    <a href="mailto:vishnupriya90807@gmail.com">
+							    <a href="mailto:nishamishra4141@gmail.com">
 								<button type="submit" class="btn shadow-dark"> Send Message</button></a>
 								</div>
 							</div>
@@ -1107,6 +1108,5 @@
     		duration:1000
     	});
   </script>
-  
 </body>
 </html>
